5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1723_2507.log
== TEST (2019-05-11 21:39:43) 
-- CODE:
p = int(input("quantidade de pirarucus: "))
pc = int(input("percentual de crescimento: "))/100
pr = int(input("pirarucus retirados: "))
m=0
while(p>0 and p<8000):
	p= p + p*pc -pr
	m=m+1
	pr = int(input("pirarucus retirados: "))
if(p<=0):
	print("ZERO")
else:	
	print("MAXIMO")
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    pr = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 21:40:33) 
-- CODE:
p = int(input("quantidade de pirarucus: "))
pc = int(input("percentual de crescimento: "))/100
pr = int(input("pirarucus retirados: "))
m=0
while(p>0 and p<8000):
	p= p + p*pc -pr
	m=m+1
	pr = int(input("pirarucus retirados: "))
if(p<=0):
	print("ZERO")
else:	
	print("MAXIMO")
print(m)
-- EXECUTION TIME:
0.13066
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 8, in <module>
    pr = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:44:44) 
-- CODE:
p = int(input("quantidade de pirarucus: "))
pc = int(input("percentual de crescimento: "))/100
pr = int(input("pirarucus retirados: "))
m=0
while(p>0 and p<8000):
	p= p + p*pc -pr
	m=m+1
	pr = int(input("pirarucus retirados: "))
if(p<=0):
	print("ZERO")
else:	
	print("MAXIMO")
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    pr = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:47:31) 
-- CODE:
p = int(input("quantidade de pirarucus: "))
pc = int(input("percentual de crescimento: "))/100
pr = int(input("pirarucus retirados: "))
m=0
while(p>0 and p<8000):
	p= p + p*pc -pr
	m=m+1
	pr = int(input("pirarucus retirados: "))
if(p<=0):
	print("ZERO")
else:	
	print("MAXIMO")
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    pr = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:48:25) 
-- CODE:
p = int(input("quantidade de pirarucus: "))
pc = int(input("percentual de crescimento: "))/100

m=0
while(p>0 and p<8000):
	p= p + p*pc -pr
	m=m+1
	pr = int(input("pirarucus retirados: "))
if(p<=0):
	print("ZERO")
else:	
	print("MAXIMO")
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    p= p + p*pc -pr
NameError: name 'pr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:48:54) 
-- CODE:
p = int(input("quantidade de pirarucus: "))
pc = int(input("percentual de crescimento: "))/100

m=0
while(p>0 and p<8000):
	pr = int(input("pirarucus retirados: "))
	p= p + p*pc -pr
	m=m+1
	#pr = int(input("pirarucus retirados: "))
if(p<=0):
	print("ZERO")
else:	
	print("MAXIMO")
print(m)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 21:49:10) 
-- CODE:
p = int(input("quantidade de pirarucus: "))
pc = int(input("percentual de crescimento: "))/100

m=0
while(p>0 and p<8000):
	pr = int(input("pirarucus retirados: "))
	p= p + p*pc -pr
	m=m+1
	#pr = int(input("pirarucus retirados: "))
if(p<=0):
	print("ZERO")
else:	
	print("MAXIMO")
print(m)
-- EXECUTION TIME:
0.128729
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
